# vesc_nexus

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  export_project.py  package.xml  project_export.txt
.github/workflows/: docker-image.yml
config/: dual_can_config.yaml  single_can_quad.yaml  vesc_nexus_example.yaml
include/vesc_nexus/: can_interface.hpp  vesc_device.hpp  vesc_nexus_node.hpp
launch/: tank_drive.launch.py  vesc_nexus_node.launch.py
msg/: CMakeLists.txt  VescState.msg  VescStateStamped.msg
src/: can_interface.cpp  packet_handler.cpp  vesc_device.cpp  vesc_manager.cpp  vesc_nexus_node.cpp
src/driver/: CMakeLists.txt  package.xml
src/driver/config/: single_can_quad.yaml
src/driver/include/driver/: can_interface.hpp  vesc_device.hpp  vesc_driver.hpp  vesc_driver_lifecycle.hpp  vesc_driver_node.hpp  vesc_interface.hpp  vesc_manager.hpp  vesc_packet.hpp  vesc_packet_factory.hpp
src/driver/include/include/vesc_nexus/: packet_handler.hpp  vesc_device.hpp  vesc_nexus_node.hpp
src/driver/launch/: vesc_driver_node.launch.py
src/driver/src/: can_interface.cpp  packet_handler.cpp  vesc_device.cpp  vesc_driver.cpp  vesc_driver_lifecycle.cpp  vesc_driver_node.cpp  vesc_interface.cpp  vesc_manager.cpp  vesc_nexus_node.cpp  vesc_packet.cpp  vesc_packet_factory.cpp
src/vesc_msgs/vesc_msgs/: CMakeLists.txt  package.xml
src/vesc_msgs/vesc_msgs/msg/: VescState.msg
src/vesc_nexus/: CMakeLists.txt  package.xml  vesc_nexus_plugins.xml
src/vesc_nexus/config/: robot_controller.yaml  vesc_nexus_config.yaml
src/vesc_nexus/include/vesc_nexus/: can_interface.hpp  datatypes.hpp  duty_calibration.hpp  message_translator.hpp  odometry_publisher.hpp  vesc_handler.hpp  vesc_hardware_interface.hpp  vesc_system_hardware_interface.hpp
src/vesc_nexus/launch/: diff_drive.launch.py  vesc_nexus_node.launch.py
src/vesc_nexus/src/: can_interface.cpp  message_translator.cpp  odometry_publisher.cpp  vesc_can_driver_node.cpp  vesc_handler.cpp  vesc_hardware_interface.cpp  vesc_system_hardware_interface.cpp
src/vesc_nexus/tools/: README.md  README_VELOCITY_TEST.md  calibrate_max_rpm.py  linearity_test.py  test_position_control.py  test_pwm_duty_control.py  test_velocity_control.py
src/vesc_nexus/urdf/: robot.urdf.xacro
