<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>vesc_nexus</name>
  <version>2.0.0</version>
  <description>
    VESC hardware interface for ros2_control. CAN-based motor control for Rob Box.
  </description>

  <maintainer email="krikz@github.com">Rob Box Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>vesc_msgs</depend>

  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/vesc_nexus_plugins.xml" />
  </export>
</package>